add endpoint post category
